# movie_recommendation_system

./: .gitignore  README.md  WORKLOG.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_recommendation_model.ipynb  04_tags_tfidf_experiment.ipynb  data_exploration.ipynb
reports/: notes_to_me.ipynb  report.ipynb
